# interactive_vsa

./: .gitignore  Cargo.toml  README.md  build.sh  combo_parser.py  notes.txt  vsa.html
docs/: bad_vsa.html  generator.html  index.html  interactive_vsa.js  notes.html  ui.js  vsa.html
docs/pkg/: interactive_vsa.d.ts  interactive_vsa.js  interactive_vsa_bg.js  interactive_vsa_bg.wasm  interactive_vsa_bg.wasm.d.ts
scripts/: build-web.sh
src/: draw.rs  html.rs  main.rs  main_state.rs  synth.rs  util.rs  vsa_state.rs
src/synth/: vsa.rs
templates/: test.html
