[package]
name = "interactive_vsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
regex = "1.7.1"
lru = "0.9.0"
lazy_static = "1.4.0"

askama = "0.12.0"
rustpython = { git = "https://github.com/RustPython/RustPython", branch = "main" }

web-sys = { version = "0.3.64", features = ["Window", "Document", "Element", "console"] }

wasm-bindgen = "0.2.84"
